Bugfixes by differ method with one and methods without parameters